# p2p-gaming-webrtc

./: .gitignore  README.md
linux/cli/: CMakeLists.txt  main.cpp
linux/cli/juice/: juice.h
test/: udpclient.py  udpserver.py
win-x86-Release/.cmake/api/v1/reply/: index-2020-03-29T15-02-40-0915.json  target-p2p-gaming-Release-d86a0efda0fa1ad433fd.json
windows/cli/: CMakeLists.txt  CMakeSettings.json  juice.lib  libcurl.lib  main.cpp  pthreadVC1.lib  zlib.lib  zlibstatic.lib
windows/cli/juice/: juice.h
ws_server/: main.py
